--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 4vh;
-  /* box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.4); */
+   box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.4);
   /* offset-x | offset-y | blur-radius | spread-radius | color */
   padding-bottom: 20px;
 }
@@ -75,7 +75,7 @@
   text-align: left;
   margin-top: 20px;
   margin-left: 25px;
-  color: #ababab;
+  color: #000000;
   font-family: sans-serif;
   width: 100vw;
 }
